模块化代码

--- a/02_modular/work/01_modular/05_load script/test5.html
+++ b/02_modular/work/01_modular/05_load script/test5.html
@@ -21,13 +21,7 @@
 <script src="test2.js"></script>
 <script src="test3.js"></script>
 <script src="test4.js"></script>
-<script src="test1.js"></script>
-<script src="test2.js"></script>
-<script src="test3.js"></script>
-<script src="test4.js"></script>
-<script src="test1.js"></script>
-<script src="test2.js"></script>
-<script src="test3.js"></script>
-<script src="test4.js"></script>
+<script type="text/javascript" src="../04_IIFE模式增强/jquery-1.10.1.js"></script>
+<script type="text/javascript" src="../04_IIFE模式增强/module4.js"></script>
 </body>
 </html>
