--- a/02_modular/work/01_modular/04_IIFE模式增强/test4.html
+++ b/02_modular/work/01_modular/04_IIFE模式增强/test4.html
@@ -8,7 +8,7 @@
 <script type='text/javascript' src='jquery-1.10.1.js'></script>
 <script type='text/javascript' src='module4.js'></script>
 <script type='text/javascript'>
-  fn1();
+  fn1(); //挂载在window上，window在调用
   fn2();
 </script>
 </body>
