--- a/05_React/1.react_test/work/10_ajax/test.html
+++ b/05_React/1.react_test/work/10_ajax/test.html
@@ -10,7 +10,7 @@
 <script src="../js/react.development.js"></script>
 <script src="../js/react-dom.development.js"></script>
 <script src="../js/babel.min.js"></script>
-<script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
+<!--<script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>-->
 <script type="text/babel">
 
   /*
@@ -27,14 +27,42 @@
   */
   class App extends React.Component {
 
-    //组件已经挂载完毕
+    constructor(props){
+      super(props);
+      this.state = {
+        data: null
+      }
+    }
+
+    //组件已经挂载完毕 生命周期函数，this已经改好了
     componentDidMount(){
       //发送ajax请求
+      /*axios.get('https://api.github.com/search/repositories?sort=starts&q=topic:javascript')
+        .then(res => {
+          console.log(res);
+          const data = res.data.items[0];
+          this.setState({data});
+        })
+        .catch(err => {
+          console.log(err);
+        })*/
 
+      fetch('https://api.github.com/search/repositories?sort=starts&q=topic:javascript')
+        .then(res => res.json()) //处理好返回值，返回一个promise对象
+        .then(res => {
+          const data = res.items[0];
+          this.setState({data});
+        })
+        .catch(err => console.log(err));
     }
 
     render() {
-      return <h1>loading...</h1>
+      const {data} = this.state;
+      if (data) {
+        return <h1>most star repo is <a href={data.html_url}>{data.name}</a></h1>
+      } else {
+        return <h1>loading...</h1>;
+      }
     }
   }
 
